--- a/Lab Report 1/main.html
+++ b/Lab Report 1/main.html
@@ -38,7 +38,7 @@
     </div>
     <div class="au">
         <h1><Center>About Us</Center></h1>
-        <p>This is Something about us</p>
+        <p>This is Sa game browing website. You can find all of the lastest Games in this website. Play Games Have fun.</p>
     </div>
     
     <div  class="card">
